updated the backend code